--- a/src/components/area/area.module.css
+++ b/src/components/area/area.module.css
@@ -3,10 +3,13 @@
 	padding:20px 0 0 20px;
 }
 .area {
-	stroke:hsl(var(--primary)/5) ;
-	stroke-width:1px;
-	box-shadow: 0 0 10px hsl(var(--primary));
+	width:100%;
+	border:1px solid grey;
 	border-radius:5px;
+}
+.area_add {
+	cursor: cell;
+	box-shadow: 0 0 10px hsl(var(--primary));
 }
 .width {
   position: absolute;
